--- a/css/style.css
+++ b/css/style.css
@@ -112,9 +112,6 @@ nav a:hover {
   margin-right: 3%;
 }
 
-
-
-
 #content img {
   max-width: 100%;
   display: block;
@@ -123,6 +120,12 @@ nav a:hover {
   margin-left: auto;
   margin-right: auto;
   align-self: center;
+}
+
+#boton-cargar-sitios {
+  display: block; 
+  margin-left: auto; 
+  margin-right: auto;
 }
 
 
