--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,12 @@ nav a:hover {
   align-self: center;
 }
 
+.sitio-destacado {
+  max-width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 #boton-cargar-sitios {
   display: block; 
   margin-left: auto; 
